// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Default 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-29 MuiButton-root-0 MuiButton-contained-8 button MuiButton-fullWidth-23"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-1"
    >
      <div
        className="buttonText"
      >
        לאישור לחץ כאן
      </div>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Button Disabled 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-29 MuiButton-root-0 MuiButton-contained-8 button MuiButton-containedPrimary-9 MuiButton-disabled-13 MuiButton-fullWidth-23 MuiButtonBase-disabled-30"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={-1}
    type="button"
  >
    <span
      className="MuiButton-label-1"
    >
      <div
        className="buttonText"
      >
        לאישור לחץ כאן
      </div>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Button Loading 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-29 MuiButton-root-0 MuiButton-contained-8 button MuiButton-containedSecondary-10 MuiButton-disabled-13 MuiButton-fullWidth-23 MuiButtonBase-disabled-30"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={-1}
    type="button"
  >
    <span
      className="MuiButton-label-1"
    >
      <div
        className="MuiCircularProgress-root-32 MuiCircularProgress-colorPrimary-36 MuiCircularProgress-indeterminate-34"
        role="progressbar"
        style={
          Object {
            "height": "1rem",
            "width": "1rem",
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg-38"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle-39 MuiCircularProgress-circleIndeterminate-41"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={Object {}}
          />
        </svg>
      </div>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Button Outlined 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-29 MuiButton-root-0 MuiButton-outlined-5 button MuiButton-outlinedPrimary-6 MuiButton-fullWidth-23"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-1"
    >
      <div
        className="buttonText"
      >
        לאישור לחץ כאן
      </div>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Button Primary 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-29 MuiButton-root-0 MuiButton-contained-8 button MuiButton-containedPrimary-9 MuiButton-fullWidth-23"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-1"
    >
      <div
        className="buttonText"
      >
        לאישור לחץ כאן
      </div>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Button Secondary 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-29 MuiButton-root-0 MuiButton-contained-8 button MuiButton-containedSecondary-10 MuiButton-fullWidth-23"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-1"
    >
      <div
        className="buttonText"
      >
        לאישור לחץ כאן
      </div>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Button Text 1`] = `
<div
  dir="rtl"
>
  <div
    className="textButton"
    onClick={[Function]}
  >
    לאישור לחץ כאן
  </div>
</div>
`;

exports[`Storyshots Components/Button Variant Text 1`] = `
<div
  dir="rtl"
>
  <div
    className="textButton"
    onClick={[Function]}
  >
    לאישור לחץ כאן
  </div>
</div>
`;
